--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,31 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
     
     <title>Contacts</title>
-
-    <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <!-- Bootstrap theme -->
-    <!-- <link href="../static/css/bootstrap-theme.css" rel="stylesheet"> -->
-
-    <!-- Custom styles for this template -->
     <link href="../static/css/style.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../static/js/ie-emulation-modes-warning.js"></script>
-
-    
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -47,82 +29,60 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
             <li class="active"><a href="contact.html">Contats</a></li>
-            
           </ul>
         </div>
       </div>
     </nav>
-    <div>
-    <h2 class="contact">Contacts</h2>
-    </div>
-    <div class="container theme-showcase">
 
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Director</h3>
-            </div>
-            <div class="panel-body">
-                <br><strong>Name:</strong> Daria Mykhalevych
-                <br><strong>Email:</strong> daria.mykhalevych@gmail.com
-                <br><strong>Skype:</strong> darka.darka.darka.darka
-                <br><strong>Phone:</strong> +38 096 469 15 57
-              </div>
+    <div class="row">
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="../static/images/darka.jpg" alt="Daria Mykhalevych" style="heigth:100px;width:140px;">
+          <div class="contact_caption">
+            <h3>Director</h3>
+            <br><strong>Name:</strong> Daria Mykhalevych
+            <br><strong>Email:</strong> daria.mykhalevych@gmail.com
+            <br><strong>Skype:</strong> darka.darka.darka.darka
+            <br><strong>Phone:</strong> +380964691557
           </div>
         </div>
-      
-        <div class="col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Manager</h3>
-            </div>
-            <div class="panel-body">
-              <br><strong>Name:</strong> Alyona Chaika
-              <br><strong>Email:</strong> alena.itbursa@gmail.com
-              <br><strong>Skype:</strong> alena.itbursa
-              <br><strong>Phone:</strong> +38 063 625 07 55
-            </div> 
-              
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Founder</h3>
-            </div>
-            <div class="panel-body">
-              <br><strong>Name:</strong> Pavel Obod
-              <br><strong>Email:</strong> itbursa100@gmail.com
-              <br><strong>Skype:</strong> azaless
-              <br><strong>Phone:</strong> +38 096 469 15 56
-            </div>
-              
-          </div>
-        </div>
-          
       </div>
-      
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="../static/images/alena.jpg" alt="Alyona Chaika" style="heigth:100px;width:148.5px;">
+          <div class="contact_caption">
+            <h3>Manager</h3>
+            <br><strong>Name:</strong> Alyona Chaika
+            <br><strong>Email:</strong> alena.itbursa@gmail.com
+            <br><strong>Skype:</strong> alena.itbursa
+            <br><strong>Phone:</strong> +380636250755
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="../static/images/pasha.jpg" alt="Pavel Obod" style="heigth:100px;width:200px;">
+          <div class="contact_caption">
+            <h3>Founder</h3>
+            <br><strong>Name:</strong> Pavel Obod
+            <br><strong>Email:</strong> itbursa100@gmail.com
+            <br><strong>Skype:</strong> azaless
+            <br><strong>Phone:</strong> +380964691556
+          </div>
+        </div>
+      </div>
     </div>
-    </div>
+
       <hr>
 
       <footer class="footer">
         <p>&copy; PyBursa 2015</p>
       </footer>
-    </div> <!-- /container -->
+    </div> 
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="../static/js/jquery.js"></script>
     <script src="../static/js/bootstrap.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     
   </body>
 </html>
