--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -28,7 +28,7 @@
                 </div>
             </nav>
             <div class="jumbotron ">
-               <h2>PyBursa best students</h2>
+               <h2>Курс PyBursa</h2>
                <!--<div class="panel panel-default">-->
                     <!-- Default panel contents -->
                    <h3>List of students</h3>
