--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="Main"><a href="#">Main</a></li>
-            <li><a href="#Contacts">Contacts</a></li>
+            <li class="active"><a href="index.html">Main</a></li>
+            <li><a href="contact.html">Contacts</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
