chanc2 content_consistency

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,9 @@
                 json, JS, jQuery, Ajax, HTTP, Firebug, Web Developer, MVC,
                 QuerySet, Raw-sql unit-tests, selenium, nginx etc. You will
                 defenetly enjoy it!</p>
+                <h2>PyBursa</h2>
                 <p><a class="btn btn-primary btn-lg" href="http://pybursa.com/"
-                role="button">More about PyBursa &gt;</a></p>
+                    role="button">official site &gt;</a></p>
             </div>
         </div>
     </div>
