--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,72 +1,84 @@
 .logo {
-  height:40px;
-  width:40px;
-  margin-top:-10px;
+  height: 40px;
+  width: 40px;
+  margin-top: -10px;
   border: 0px solid black;
 }
-
-.navbar, navbar-default, navbar-fixed-top, navbar-collapse, navbar-nav {
-background: rgb(226,226,226);
-background: -moz-linear-gradient(top,  rgba(226,226,226,1) 0%, rgba(219,219,219,1) 50%, rgba(209,209,209,1) 51%, rgba(254,254,254,1) 100%);
-background: -webkit-linear-gradient(top,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%);
-background: linear-gradient(to bottom,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe',GradientType=0 );
+.navbar {
+  background: rgb(226, 226, 226);
+  background: -moz-linear-gradient(top, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+  background: -webkit-linear-gradient(top, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+  background: linear-gradient(to bottom, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
 }
-
-
+.navbar-default {
+  background: rgb(226, 226, 226);
+  background: -moz-linear-gradient(top, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+  background: -webkit-linear-gradient(top, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+  background: linear-gradient(to bottom, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+}
+.navbar-fixed-top {
+  background: rgb(226, 226, 226);
+  background: -moz-linear-gradient(top, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+  background: -webkit-linear-gradient(top, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+  background: linear-gradient(to bottom, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+}
+.navbar-collapse {
+  background: rgb(226, 226, 226);
+  background: -moz-linear-gradient(top, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+  background: -webkit-linear-gradient(top, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+  background: linear-gradient(to bottom, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+}
+.navbar-nav {
+  background: rgb(226, 226, 226);
+  background: -moz-linear-gradient(top, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+  background: -webkit-linear-gradient(top, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+  background: linear-gradient(to bottom, rgba(226, 226, 226, 1) 0%, rgba(219, 219, 219, 1) 50%, rgba(209, 209, 209, 1) 51%, rgba(254, 254, 254, 1) 100%);
+}
 .footer {
-background: rgb(246,246,246);
-background: -moz-linear-gradient(top,  rgba(246,246,246,1) 0%, rgba(225,225,225,1) 49%, rgba(241,241,241,1) 50%, rgba(255,255,255,1) 100%);
-background: -webkit-linear-gradient(top,  rgba(246,246,246,1) 0%,rgba(225,225,225,1) 49%,rgba(241,241,241,1) 50%,rgba(255,255,255,1) 100%);
-background: linear-gradient(to bottom,  rgba(246,246,246,1) 0%,rgba(225,225,225,1) 49%,rgba(241,241,241,1) 50%,rgba(255,255,255,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0 );
+  background: rgb(246, 246, 246);
+  background: -moz-linear-gradient(top, rgba(246, 246, 246, 1) 0%, rgba(225, 225, 225, 1) 49%, rgba(241, 241, 241, 1) 50%, rgba(255, 255, 255, 1) 100%);
+  background: -webkit-linear-gradient(top, rgba(246, 246, 246, 1) 0%, rgba(225, 225, 225, 1) 49%, rgba(241, 241, 241, 1) 50%, rgba(255, 255, 255, 1) 100%);
+  background: linear-gradient(to bottom, rgba(246, 246, 246, 1) 0%, rgba(225, 225, 225, 1) 49%, rgba(241, 241, 241, 1) 50%, rgba(255, 255, 255, 1) 100%);
 }
-
 .active > a {
-background: rgb(255,255,255);
-background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(250,246,232,1) 50%, rgba(245,236,205,1) 51%, rgba(252,249,240,1) 100%);
-background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(250,246,232,1) 50%,rgba(245,236,205,1) 51%,rgba(252,249,240,1) 100%);
-background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(250,246,232,1) 50%,rgba(245,236,205,1) 51%,rgba(252,249,240,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fcf9f0',GradientType=0 );
-
+  background: rgb(255, 255, 255);
+  background: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(250, 246, 232, 1) 50%, rgba(245, 236, 205, 1) 51%, rgba(252, 249, 240, 1) 100%);
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(250, 246, 232, 1) 50%, rgba(245, 236, 205, 1) 51%, rgba(252, 249, 240, 1) 100%);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(250, 246, 232, 1) 50%, rgba(245, 236, 205, 1) 51%, rgba(252, 249, 240, 1) 100%);
 }
-
 #cnt1 {
-     //background-color:rgba(240, 240, 240, 0.88);
-     width:90%;
-     margin-top:10px;
-     margin-bottom:20px;
-     margin-left: 30px;
-     margin-right: 30px;
- }
+  /*background-color:rgba(240, 240, 240, 0.88); */
   
- .feature{
-     padding: 5px 0;
-    text-align: center;
- }
- .feature > div > div{
-    padding: 10px;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    transition: 0.2s;
- }
- .feature > div:hover > div{
-    margin-top: -5px;
-    border: 1px solid rgb(200, 200, 200);
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 2px 2px;
-    background: rgba(232, 215, 215, 0.10);
-    transition: 0.3s;
- }
-
-.container{
-  width:90%;
+  width: 90%;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
-
-.main_item{
+.feature {
+  padding: 5px 0;
+  text-align: center;
+}
+.feature > div > div {
+  padding: 10px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  transition: 0.2s;
+}
+.feature > div:hover > div {
+  margin-top: -5px;
+  border: 1px solid rgb(200, 200, 200);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 2px 2px;
+  background: rgba(232, 215, 215, 0.10);
+  transition: 0.3s;
+}
+.container {
+  width: 90%;
+}
+.main_item {
   list-style-type: square;
   font-weight: bold;
 }
-
 .period {
   list-style: inherit;
   list-style-type: circle;
