--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,7 +39,9 @@
         <div class="thumbnail">
           <img src="../static/images/darka.jpg" alt="Daria Mykhalevych" style="heigth:100px;width:140px;">
           <div class="contact_caption">
-            <h3>Director</h3>
+            <div>
+              <h3 class="title">Director</h3>
+            </div>
             <br><strong>Name:</strong> Daria Mykhalevych
             <br><strong>Email:</strong> daria.mykhalevych@gmail.com
             <br><strong>Skype:</strong> darka.darka.darka.darka
@@ -51,7 +53,9 @@
         <div class="thumbnail">
           <img src="../static/images/alena.jpg" alt="Alyona Chaika" style="heigth:100px;width:148.5px;">
           <div class="contact_caption">
-            <h3>Manager</h3>
+            <div>
+              <h3 class="title">Manager</h3>
+            </div>
             <br><strong>Name:</strong> Alyona Chaika
             <br><strong>Email:</strong> alena.itbursa@gmail.com
             <br><strong>Skype:</strong> alena.itbursa
@@ -63,7 +67,9 @@
         <div class="thumbnail">
           <img src="../static/images/pasha.jpg" alt="Pavel Obod" style="heigth:100px;width:200px;">
           <div class="contact_caption">
-            <h3>Founder</h3>
+            <div>
+              <h3 class="title">Founder</h3>
+            </div>
             <br><strong>Name:</strong> Pavel Obod
             <br><strong>Email:</strong> itbursa100@gmail.com
             <br><strong>Skype:</strong> azaless
