--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/carousel.css" rel="stylesheet">
+    
   </head>
 <body>
 	<div class="navbar-wrapper">
@@ -69,72 +69,71 @@
 		    <tbody>
 		        <tr>
 			        <td>1</td>
-		          <td><a href="student_detail.html">Петрушенко</a></td>
-		          <td><a href="student_detail.html">Дмитрий</a></td>
+		          <td class="name"><a href="student_detail.html">Петрушенко</a></td>
+		          <td class="name"><a href="student_detail.html">Дмитрий</a></td>
 		          <td>Украина, г. Харьков, Ул. Мира 1/1</td>
 		          <td>sit</td>
 		        </tr>
 		        <tr>
 		          <td>2</td>
-		          <td>Гагаро</td>
-		          <td>Денис</td>
+		          <td class="name">Гагаро</td>
+		          <td class="name">Денис</td>
 		          <td>Украина, г. Харьков, Ул. Мира 1/2</td>
 		          <td>elit</td>
 		        </tr>
 		        <tr>
 		          <td>3</td>
-		          <td>Пузина</td>
-		          <td>Екатерина</td>
+		          <td class="name">Пузина</td>
+		          <td class="name">Екатерина</td>
 		          <td>Украина, г. Харьков, Ул. Мира 1/3</td>
 		          <td>Praesent</td>
 		        </tr>
 		        <tr>
 		          <td>4</td>
-		          <td>Крикливец</td>
-		          <td>Олег</td>
+		          <td class="name">Крикливец</td>
+		          <td class="name">Олег</td>
 		          <td>Украина, г. Харьков, Ул. Мира 1/4</td>
 		          <td>ante</td>
 		        </tr>
 		        <tr>
 		          <td>5</td>
-		          <td>Коваленко</td>
-		          <td>Екатерина</td>
+		          <td class="name">Коваленко</td>
+		          <td class="name">Екатерина</td>
 		          <td>Украина, г. Харьков, Ул. Мира 1/5</td>
 		          <td>nisi</td>
 		        </tr>
 		        <tr>
 		          <td>6</td>
-		          <td>Михайлов</td>
-		          <td>Станислав</td>
+		          <td class="name">Михайлов</td>
+		          <td class="name">Станислав</td>
 		          <td>Украина, г. Харьков, Ул. Мира 1/6</td>
 		          <td>at</td>
 		        </tr>
 		        <tr>
 		          <td>7</td>
-		          <td>Терентьев</td>
-		          <td>Денис</td>
+		          <td class="name">Терентьев</td>
+		          <td class="name">Денис</td>
 		          <td>Украина, г. Харьков, Ул. Мира 1/7</td>
 		          <td>Duis</td>
 		        </tr>
 		        <tr>
 		          <td>8</td>
-		          <td>Губаренко</td>
-		          <td>Владимир</td>
+		          <td class="name">Губаренко</td>
+		          <td class="name">Владимир</td>
 		          <td>Украина, г. Харьков, Ул. Мира 1/8</td>
 		          <td>mauris</td>
 		        </tr>
 		        <tr>
 		          <td>9</td>
-		          <td>Тимонов</td>
-		          <td>Алексей</td>
+		          <td class="name">Тимонов</td>
+		          <td class="name">Алексей</td>
 		          <td>Украина, г. Харьков, Ул. Мира 1/9</td>
 		          <td>sed</td>
-		        </tr>
-								        
+		        </tr>      
 						<tr>
 		          <td>10</td>
-		          <td>Фурса</td>
-		          <td>Светлана</td>
+		          <td class="name">Фурса</td>
+		          <td class="name">Светлана</td>
 		          <td>Украина, г. Харьков, Ул. Мира 1/10</td>
 		          <td>Mauris</td>
 		        </tr>
