--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,10 +21,14 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <div class="btn-group">
-            <ul class="nav nav-pills">
-              <li role="presentation" ><a href="index.html">Main</a></li>
-              <li role="presentation"class="active"><a href="#">Contacts</a></li> 
-            </ul>
+             <button aria-controls="navbar" aria-expanded="false" class=
+                "navbar-toggle collapsed" data-target="#navbar" data-toggle=
+                "collapse" type="button"><span class="sr-only">Toggle
+                navigation</span> <span class="icon-bar"></span> <span class=
+                "icon-bar"></span> <span class="icon-bar"></span></button>
+                <a class="navbar-brand" href="index.html">Main</a> <a class=
+                "navbar-brand" href="contact.html">Contacts</a>
+            </div>
            </div>
         </div>
         <div class="collapse nav-coll" id="bs-example-navbar-collapse-1">
