--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,13 @@
         <div class="navbar-header">
           <div class="btn-group">
             <ul class="nav nav-pills">
-              <li role="presentation" class="active"><a href="#">Main</a></li>
-              <li role="presentation"><a href="contact.html">Contacts</a></li>
+              <button aria-controls="navbar" aria-expanded="false" class=
+                "navbar-toggle collapsed" data-target="#navbar" data-toggle=
+                "collapse" type="button"><span class="sr-only">Toggle
+                navigation</span> <span class="icon-bar"></span> <span class=
+                "icon-bar"></span> <span class="icon-bar"></span></button>
+                <a class="navbar-brand" href="index.html">Main</a> <a class=
+                "navbar-brand" href="contact.html">Contacts</a>
             </ul>
           </div>
         </div>
