--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
     </nav>
     <div class="jumbotron">
       <div class="container">
-        <h1>Discription</h1>
+        <h1>Description</h1>
         <h3>PyBursa</h3>
         <p>В этом курсе мы сместили акцент в сторону практики.
            Будет умеренное количество теории - максимум практики.
