chanc2 content_consistency4

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,10 @@
     <div class="jumbotron">
         <div class="container">
             <div>
+                <h2>Bursa</h2>
+
+                <p><a class="btn btn-primary btn-lg" href="http://pybursa.com/"
+                    role="button">official site &gt;</a></p>
                 <h2>Description</h2>
                 <p>Pybursa is a great place where you can learn basic Python
                 and Django framework. Also you will be up to date with big
@@ -48,16 +52,12 @@
                 json, JS, jQuery, Ajax, HTTP, Firebug, Web Developer, MVC,
                 QuerySet, Raw-sql unit-tests, selenium, nginx etc. You will
                 defenetly enjoy it!</p>
+                <h2>Program</h2>
 
             </div>
         </div>
     </div>
-    <div>
-                <h2>PyBursa</h2>
 
-                <p><a class="btn btn-primary btn-lg" href="http://pybursa.com/"
-                    role="button">official site &gt;</a></p>
-                </div>
     <div class="row">
         <div class="col-md-9">
             <div class="container" role="main">
