--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,13 +29,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <div class="navbar-brand" >PyBursa</div>
+          <div class="navbar-brand">PyBursa</div>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+            <li><a href="index.html">Main
+            <!--<span class="sr-only">(current)</span>-->
+            </a></li>
             <li class="active"><a href="contact.html">Contacts</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
