--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,9 @@
         <!-- Collect the nav links, forms, and other content for toggling  -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="index.html">Main
+            <!--<span class="sr-only">(current)</span>-->
+            </a></li>
             <li><a href="contact.html">Contacts</a></li>
           </ul>
         </div>
@@ -43,40 +45,40 @@
     </nav>
 
     <div class="page-header align-center">
-      <h1 class = "align-center big-font">PyBursa - professional course of Python</h1>
-        <div class="container">
-          <div class="jumbotron transparant-background">
-            <h1>Description</h1>
-            <p class = "align-justify">This course aims to teach everyone the basics of programming computers using Python.
-              We cover the basics of how one constructs a program from a series of simple instructions in Python.
-              The course has no pre-requisites and avoids all but the simplest mathematics.
-              Anyone with moderate computer experience should be able to master the materials in this course.
-              This course will cover Chapters 1-5 of the textbook "Python for Informatics".
-              This course is equivalent to the first half of the 11-week "Programming for Everybody (Python)" course.
-              Once a student completes this course, they will be ready to take more advanced programming courses.</p>
-          </div>
+      <h1 class = "align-center big-font">PyBursa - professional course of Python
+      </h1>
+      <div class="container">
+        <div class="jumbotron transparant-background">
+          <h1>Description</h1>
+          <p class = "align-justify">This course aims to teach everyone the basics of programming computers using Python.
+            We cover the basics of how one constructs a program from a series of simple instructions in Python.
+            The course has no pre-requisites and avoids all but the simplest mathematics.
+            Anyone with moderate computer experience should be able to master the materials in this course.
+            This course will cover Chapters 1-5 of the textbook "Python for Informatics".
+            This course is equivalent to the first half of the 11-week "Programming for Everybody (Python)" course.
+            Once a student completes this course, they will be ready to take more advanced programming courses.</p>
         </div>
-        <div class="container">
-          <div class="jumbotron transparant-background">
-            <h1>Program</h1>
-            <div class="panel panel-default transparant-background">
-              <table class="table align-justify">
-                <tr>
-                  <td>1</td>
-                  <td>Chapter One - Why we Program?</td>
-                  <td>Welcome <br> Lecture materials <br>  Additional Materials</td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Installing and Using Python</td>
-                    <td>Installing Python - Overview <br> Recommended: Install Python - Windows 8 <br>  Recommended: Using Python - Macintosh<br> Recommended: Using Python on a Raspberry Pi <br> Recommended: Install Python - Windows Vista <br> Optional: Python Installation </td>
-                </tr>
-              </table>
-            </div>
-          </div>
-        </div>
-
       </div>
+      <div class="container">
+        <div class="jumbotron transparant-background">
+          <h1>Program</h1>
+          <div class="panel panel-default transparant-background">
+            <table class="table align-justify">
+              <tr>
+                <td>1</td>
+                <td>Chapter One - Why we Program?</td>
+                <td>Welcome <br> Lecture materials <br>  Additional Materials</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Installing and Using Python</td>
+                  <td>Installing Python - Overview <br> Recommended: Install Python - Windows 8 <br>  Recommended: Using Python - Macintosh<br> Recommended: Using Python on a Raspberry Pi <br> Recommended: Install Python - Windows Vista <br> Optional: Python Installation </td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
