--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="active">
-            <a href="index.html">Main <span class="sr-only">(current)</span></a>
+            <a href="index.html">Main</a>
           </li>
           <li>
             <a href="contact.html">Contacts</a>
@@ -45,13 +45,13 @@
   <div class="container theme-showcase" role="main">
     <div class="container">
       <div class="jumbotron">
-        <h2 class="course">Description PyBursa</h2>
+        <h2 class="course">Description</h2>
         <p>Курсы ItBursa начали работу в 2014 году. Мы специализируемся на «модных» языках программирования. Принципиальное наше отличие от других курсов –
         максимум практики и жесткая система обязательных домашних заданий. Преподаватели – опытные практикующие разработчики, они помогают участникам в ходе
         курсов создать реальные проекты и получить практические навыки, применимые к работе. Домашние задания на наших курсах обязательны и их невыполнение
         приводит к исключению с курсов. Таким образом, мы готовим не просто «слушателей» курсов, а настоящих специалистов, способных создавать пусть простые,
         но рабочие проекты.</p>
-        <p>Более подробную информацию вы можете получить по номерам указанным на странице <a class="text-primary" href="contact.html">контакты</a></p><br>
+        
         <h2 class="course">Program</h2>
         <div class="container">
           <div class="row">
