--- a/templates/index.html
+++ b/templates/index.html
@@ -35,29 +35,22 @@
                     </div><button class="btn btn-success" type="submit">Sign
                     in</button>
                 </form>
-            </div><!--/.navbar-collapse -->
+            </div>
         </div>
     </nav>
     <div class="jumbotron">
         <div class="container">
-            <div>
-                <h2>Bursa</h2>
-
-                <p><a class="btn btn-primary btn-lg" href="http://pybursa.com/"
-                    role="button">official site &gt;</a></p>
-                <h2>Description</h2>
-                <p>Pybursa is a great place where you can learn basic Python
-                and Django framework. Also you will be up to date with big
-                number of useful tools/technologies such a pep8, CLI, git, csv,
-                json, JS, jQuery, Ajax, HTTP, Firebug, Web Developer, MVC,
-                QuerySet, Raw-sql unit-tests, selenium, nginx etc. You will
-                defenetly enjoy it!</p>
-                <h2>Program</h2>
-
-            </div>
+            <h2>PyBursa</h2>
+            <h2>Description</h2>
+            <p>Pybursa is a great place where you can learn basic Python and
+            Django framework. Also you will be up to date with big number of
+            useful tools/technologies such a pep8, CLI, git, csv, json, JS,
+            jQuery, Ajax, HTTP, Firebug, Web Developer, MVC, QuerySet, Raw-sql
+            unit-tests, selenium, nginx etc. You will defenetly enjoy it!</p>
+            <p><a class="btn btn-primary btn-lg" href="http://pybursa.com/"
+            role="button">official site &gt;</a></p>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-9">
             <div class="container" role="main">
@@ -395,6 +388,6 @@
     "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
     </script> 
     <script src="../static/js/bootstrap.js">
-    </script> 
+    </script>
 </body>
 </html>
