--- a/templates/index.html
+++ b/templates/index.html
@@ -45,10 +45,9 @@
     </nav>
 
     <div class="page-header align-center">
-      <h1 class = "align-center big-font">PyBursa - professional course of Python
-      </h1>
       <div class="container">
         <div class="jumbotron transparant-background">
+          <h1 class = "align-center big-font">PyBursa - professional course of Python</h1>
           <h1>Description</h1>
           <p class = "align-justify">This course aims to teach everyone the basics of programming computers using Python.
             We cover the basics of how one constructs a program from a series of simple instructions in Python.
