--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@ background: lemonchiffon;
 .background-image
 {
     background-image: url(../images/background.jpg);
-    background-size: 100%;
+    /*background-size: 100%;*/
    }
 
 .transparant-background
