--- a/templates/contact.html
+++ b/templates/contact.html
@@ -32,7 +32,6 @@
       </button>
       <!-- <a class="navbar-brand" href="#">PyBursa</a>-->
     <!-- <div class="navbar-brand" >Bursa
-
 </div>-->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,9 +39,8 @@
       <ul class="nav navbar-nav">
        
         <li><a href="index.html">Main</a></li>
-	    <!--<li class="active"><a href="contact.html">Contacts <span class="sr-only">(current)</span></a></li> -->
-	    <li class="active"><a href="contact.html">Contacts</a></li>
-        
+	   <li class="active"><a href="contact.html">Contacts</a></li>
+        <li><a href="student_list.html">Students</a></li>	
       </ul>
      
         </li>
@@ -79,7 +77,7 @@
  		 <p><b>Skype:</b> azaless</p>
  		 <p><b>Phone:</b> +38 063 625 07 55</p>
 		</div>
-  
+ 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
