--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Hello, Python</title>
+    <title>Student of Bursa</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -18,9 +18,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body >
+  <body class="area">
    
-	<nav class="navbar navbar-default">
+    <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -30,46 +30,63 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <!--<a class="navbar-brand" href="#">PyBursa</a>-->
-      <!--<div class="nav navbar-nav">Bursa
-			</div>-->
+      <!-- <a class="navbar-brand" href="#">PyBursa</a>-->
+    <!-- <div class="navbar-brand" >Bursa
+</div>-->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Main</a></li>
+       
+        <li><a href="index.html">Main</a></li>
         <li><a href="contact.html">Contacts</a></li>
-        <li><a href="student_list.html">Students</a></li>
-      
+        <li class="active"><a href="student_list.html">Students</a></li>
       </ul>
-     
-        </li>
+      </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-	</nav>
+</nav>
 
-<div class="container">
-<div class="panel-color jumbotron">
-<p> PyBursa</p>
- <h2>Description</h2>
-  <p class="justify">Python is an interpreted, object-oriented, high-level programming language with dynamic semantics. Its high-level built in data structures, combined with dynamic typing and dynamic binding, make it very attractive for Rapid Application Development, as well as for use as a scripting or glue language to connect existing components together. </p>
-  <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>-->
-</div>
+<div class="center bold page-header">
+  <h1>Students of course <small class="font">PYTHON</small></h1>
 </div>
 
-<div class="center" class="page-header" >
-  <h1  >Program</h1>
+ <!-- Table class="table align-justify"-->
+  <table  class="jewel" >
+<tr>
+ <th>No</th><th>Surname</th><th>Name</th><th>Adress</th><th>Skype</th>
+ </tr> 
 
-	<div class="alert alert-success" role="alert">PYTHON</div>
-	<div class="alert alert-info" role="alert">GIT</div>
-	<div class="alert alert-warning" role="alert">HTML</div>
-	<div class="alert alert-danger" role="alert">CSS</div>
-</div>
-
+<tr class="odd"> 
+<td><a href="student_detail.html">1</a></td>
+<td>Persianova</td>
+<td>Olena</td><td>Kharkov</td><td>OlenaPersianova</td>
+ </tr>
+<tr class="modd"> 
+<td>2</td>
+<td>Ivanov</td>
+<td>Ivan</td><td>Kharkov</td><td>IvanovIvan</td>
+ </tr>
+<tr class="odd"> 
+<td>3</td>
+<td>Petrov</td>
+<td>Petr</td><td>Lviv</td><td>PetrovPetr</td>
+ </tr>
+<tr class="modd"> 
+<td>4</td>
+<td>Sidorov</td>
+<td>Sidor</td><td>Odessa</td><td>SidorovSidor</td>
+ </tr>
+<tr class="odd"> 
+<td>5</td>
+<td>Politov</td>
+<td>Polit</td><td>Odessa</td><td>PolitivPolit</td>
+ </tr>
+  </table>    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.min.js"></script>
-  </body>
+	</body>
 </html>
