--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@
   <div class="container theme-showcase" role="main">
     <div class="container">
       <div class="jumbotron">
+				<h2 class="label label-info">PyBursa</h2>
         <h2 class="course">Description</h2>
         <p>Курсы ItBursa начали работу в 2014 году. Мы специализируемся на «модных» языках программирования. Принципиальное наше отличие от других курсов –
         максимум практики и жесткая система обязательных домашних заданий. Преподаватели – опытные практикующие разработчики, они помогают участникам в ходе
