--- a/templates/index.html
+++ b/templates/index.html
@@ -40,8 +40,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Description</h1>
-        <h3>PyBursa</h3>
-        <p>В этом курсе мы сместили акцент в сторону практики.
+        <p>В этом PyBursa мы сместили акцент в сторону практики.
            Будет умеренное количество теории - максимум практики.
            Примерное соотношение теории и практики: 30% на 70%
            Курсы будут проходить с 19 октября по 28 декабря.
