--- a/templates/index.html
+++ b/templates/index.html
@@ -39,13 +39,15 @@
     </nav>
     <div class="jumbotron">
       <div class="container">
-        <h1>Description</h1>
-        <p>В этом PyBursa мы сместили акцент в сторону практики.
-           Будет умеренное количество теории - максимум практики.
-           Примерное соотношение теории и практики: 30% на 70%
-           Курсы будут проходить с 19 октября по 28 декабря.
-           Практические занятия в аудитории + онлайн лекции.
-        </p>
+	<div>
+          <h1>Description</h1>
+          <p>В этом PyBursa мы сместили акцент в сторону практики.
+             Будет умеренное количество теории - максимум практики.
+             Примерное соотношение теории и практики: 30% на 70%
+             Курсы будут проходить с 19 октября по 28 декабря.
+             Практические занятия в аудитории + онлайн лекции.
+          </p>
+        </div>
       </div>
     </div>
     <div class="jumbotron">
