--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
         <div class="jumbotron transparant-background">
           <h1>Program</h1>
           <div class="panel panel-default transparant-background">
-            <table class="table align-justify">
+            <table class="table table-striped align-justify">
               <tr>
                 <td>1</td>
                 <td>Chapter One - Why we Program?</td>
