--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,20 @@
         <p class="lead">Python is strongly typed (i.e. types are enforced), dynamically, implicitly typed (i.e. you don't have to declare variables), case sensitive (i.e. var and VAR are two different variables) and object-oriented (i.e. everything is an object). The data structures available in python are lists, tuples and dictionaries. Sets are available in the sets library (but are built-in in Python 2.5 and later). Lists are like one-dimensional arrays (but you can also have lists of other lists), dictionaries are associative arrays (a.k.a. hash tables) and tuples are immutable one-dimensional arrays (Python "arrays" can be of any type, so you can mix e.g. integers, strings, etc in lists/dictionaries/tuples). The index of the first item in all array types is 0. Negative numbers count from the end towards the beginning, -1 is the last item. Variables can point to functions</p>
         <h2>Program</h2>
         <p class="lead">Python is strongly typed (i.e. types are enforced), dynamically, implicitly typed (i.e. you don't have to declare variables), case sensitive (i.e. var and VAR are two different variables) and object-oriented (i.e. everything is an object). The data structures available in python are lists, tuples and dictionaries. Sets are available in the sets library (but are built-in in Python 2.5 and later). Lists are like one-dimensional arrays (but you can also have lists of other lists), dictionaries are associative arrays (a.k.a. hash tables) and tuples are immutable one-dimensional arrays (Python "arrays" can be of any type, so you can mix e.g. integers, strings, etc in lists/dictionaries/tuples). The index of the first item in all array types is 0. Negative numbers count from the end towards the beginning, -1 is the last item. Variables can point to functions</p>
-      </div>
+        <div class="color_block">
+          <em class="bt"><b>&nbsp;</b></em>
+          <div class="block_content">
+          Open source software is made better when users can easily contribute code and documentation to fix bugs and add features.
+          Python strongly encourages community involvement in improving the software. Learn more about how to make Python better
+          for everyone.
+          </div>
+          <em class="bb"><b>&nbsp;</b></em>
+        </div>
+
+
+
+
+    </div>
 
       <footer>
         <p>© Company 2015</p>
