--- a/templates/index.html
+++ b/templates/index.html
@@ -49,13 +49,15 @@
         <div class="jumbotron transparant-background">
           <h1 class = "align-center big-font">PyBursa - professional course of Python</h1>
           <h1>Description</h1>
-          <p class = "align-justify">This course aims to teach everyone the basics of programming computers using Python.
-            We cover the basics of how one constructs a program from a series of simple instructions in Python.
-            The course has no pre-requisites and avoids all but the simplest mathematics.
-            Anyone with moderate computer experience should be able to master the materials in this course.
-            This course will cover Chapters 1-5 of the textbook "Python for Informatics".
-            This course is equivalent to the first half of the 11-week "Programming for Everybody (Python)" course.
-            Once a student completes this course, they will be ready to take more advanced programming courses.</p>
+          <div class = "lead">
+            <p class = "align-justify">This course aims to teach everyone the basics of programming computers using Python.
+              We cover the basics of how one constructs a program from a series of simple instructions in Python.
+              The course has no pre-requisites and avoids all but the simplest mathematics.
+              Anyone with moderate computer experience should be able to master the materials in this course.
+              This course will cover Chapters 1-5 of the textbook "Python for Informatics".
+              This course is equivalent to the first half of the 11-week "Programming for Everybody (Python)" course.
+              Once a student completes this course, they will be ready to take more advanced programming courses.</p>
+          </div>
         </div>
       </div>
       <div class="container">
