--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -20,7 +20,53 @@
       <li role="presentation"><a href="index.html">Main</a></li>
       <li role="presentation"><a href="contact.html">Contacts</a></li>
     </ul>
-    
+    <h2>Студенты PyBursa</h2>
+    <p>Список студентов:</p>
+    <table class="table table-bordered">
+        <th>No</th>
+        <th>Surname</th>
+        <th>Name</th>
+        <th>Address</th>
+        <th>Skype</th>
+      <tbody>
+        <tr class="active">
+          <td><a href="student_detail.html">1</a></td>
+          <td>Faulkner</td>
+          <td>William</td>
+          <td>Украина, г.Харьков, ул. Пушкинская д.5 кв.1</td>
+          <td>sartoris</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Eliot</td>
+          <td>Thomas</td>
+          <td>Украина, г.Харьков, ул. Пушкинская д.5 кв.2</td>
+          <td>the_waste_land</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Wolfe</td>
+          <td>Thomas</td>
+          <td>Украина, г.Харьков, ул. Пушкинская д.5 кв.3</td>
+          <td>lookhomeward.angel</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Woolf</td>
+          <td>Virginia</td>
+          <td>Украина, г.Харьков, ул. Пушкинская д.5 кв.4</td>
+          <td>mrs.dalloway</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>Updike</td>
+          <td>John</td>
+          <td>Украина, г.Харьков, ул. Пушкинская д.5 кв.5</td>
+          <td>rabbit.rabbit</td>
+        </tr>
+      </tbody>
+    </table>
+           
     
     
     
