More css selectors

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -46,10 +46,10 @@
       <hr>
       <ul>
         <li>
-          <h3 class="director change">Director</h3>
+          <h3 class="director change text-uppercase">Director</h3>
         </li>
         <li style="list-style: none">
-          <img height="150" src="../static/images/tim-cook.png">
+          <img class="img-rounded" height="150" src="../static/images/tim-cook.png">
           <ul>
             <li><b>Name:</b> Tim Cook</li>
             <li><b>Skype:</b> timcook</li>
@@ -61,10 +61,10 @@
       <hr>
       <ul>
         <li>
-          <h3 class="director change">Manager</h3>
+          <h3 class="director change text-uppercase">Manager</h3>
         </li>
         <li style="list-style: none">
-          <img height="150" src="../static/images/eddy_cue.png">
+          <img class="img-rounded" height="150" src="../static/images/eddy_cue.png">
           <ul>
             <li><b>Name:</b> Eddy Cue</li>
             <li><b>Skype:</b> eddy.cue</li>
@@ -76,10 +76,10 @@
       <hr>
       <ul>
         <li>
-          <h3 class="director change">Founder</h3>
+          <h3 class="director change text-uppercase">Founder</h3>
         </li>
         <li style="list-style: none">
-          <img height="150" src="../static/images/steve.png">
+          <img class="img-rounded" height="150" src="../static/images/steve.png">
           <ul>
             <li><b>Name:</b> Steve Jobs</li>
             <li><b>Skype:</b> ---</li>
