--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron transparent list">
       <h1 class="change">iBursa</h1>
-      <h2 class="change">Description</h2>
+      <h2 class="change text-uppercase">Description</h2>
       <p>This course introduces the student to the Python language. Upon
       completion of this class, the student will be able to write non trivial
       Python programs dealing with a wide variety of subject matter domains.
@@ -51,7 +51,7 @@
       expressions. The course is supplemented with many hands on labs using
       either Linux or Windows.</p>
       <hr>
-      <h2 class="change">Program</h2>
+      <h2 class="change text-uppercase">Program</h2>
       <ul>
         <li class="zagolovok1">Chapter 1: An Introduction to Python
           <ol class="spisok1">
