add e-mail info to student_detail.html

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -85,10 +85,10 @@
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h3 class="panel-title">Post</h3>
+        <h3 class="panel-title">E-mail</h3>
       </div>
       <div class="panel-body">
-        61000
+        thesoundandthefury@gmail.com
       </div>
     </div>
     <div class="panel panel-info">
