--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -19,14 +19,42 @@
     <![endif]-->
   </head>
   <body>
-  
+  	<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <!--<a class="navbar-brand" href="#">PyBursa</a>-->
+      <!--<div class="nav navbar-nav">Bursa
+			</div>-->
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="index.html">Main</a></li>
+        <li><a href="contact.html">Contacts</a></li>
+        <li><a href="student_list.html">Students</a></li>
+      
+      </ul>
+     
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+	</nav>
 	<nav>
   	<ul class=" color pager">
     <li><a href="student_list.html">Previous</a></li>
-  	<h1>Olena Persianova</h1>
+  	
     </ul>
 </nav>
-
+<div class="center">
+<h1>Olena Persianova</h1> </div>
 <!-- Table class="table align-justify "-->
 <table border="1" cellpadding="10">
 
@@ -48,7 +76,7 @@
 </tr>
 <tr > 
 <td class="bold">Address</a></td>
-<td>Rharkov</td>
+<td>Kharkov</td>
 </tr>
 <tr > 
 <td class="bold"> E-mail</a></td>
@@ -74,10 +102,10 @@
  </tr> 
 <tr > 
 <td rowspan="2" >Python</a></td>
-<td rowspan="2" >Week1</td><td>Test</td><td>100%</td>
+<td rowspan="2" >Week1</td><td>Tests</td><td>100%</td>
 </tr>
 <tr > 
-<td>Problem Task1</td><td>100%</td>
+<td>Problem Task</td><td>100%</td>
 </tr>
 
 
