--- a/templates/contact.html
+++ b/templates/contact.html
@@ -34,7 +34,7 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav font-bold">
             <li><a href="index.html">Main
             <!--<span class="sr-only">(current)</span>-->
             </a></li>
@@ -57,7 +57,7 @@
                       <div class="panel panel-default transparant-background">
                         <!-- Table -->
                         <table class="table">
-                          <tr>
+                          <tr class = "font-bold">
                             <td>Name:</td>
                             <td>Pavel Obod</td>
                           </tr>
@@ -89,7 +89,7 @@
                       <div class="panel panel-default transparant-background">
                         <!-- Table -->
                         <table class="table">
-                          <tr>
+                          <tr class = "font-bold">
                             <td>Name:</td>
                             <td>Daria Mykhalevych</td>
                           </tr>
@@ -120,7 +120,7 @@
                       <div class="panel panel-default transparant-background">
                         <!-- Table -->
                         <table class="table">
-                          <tr>
+                          <tr class = "font-bold">
                             <td>Name:</td>
                             <td>Alyona Chaika</td>
                           </tr>
