--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
 
         <!-- Collect the nav links, forms, and other content for toggling  -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav font-bold">
             <li class="active"><a href="index.html">Main
             <!--<span class="sr-only">(current)</span>-->
             </a></li>
@@ -47,8 +47,10 @@
     <div class="page-header align-center">
       <div class="container">
         <div class="jumbotron transparant-background">
-          <h1 class = "align-center big-font">PyBursa - professional course of Python</h1>
-          <h1>Description</h1>
+          <h2 class = "align-center">PyBursa - professional course of Python</h2>
+          <div class = "font-small-caps desription-color">
+            <h3>Description</h3>
+          </div>
           <div class = "lead">
             <p class = "align-justify">This course aims to teach everyone the basics of programming computers using Python.
               We cover the basics of how one constructs a program from a series of simple instructions in Python.
@@ -62,7 +64,7 @@
       </div>
       <div class="container">
         <div class="jumbotron transparant-background">
-          <h1>Program</h1>
+          <h2>Program</h2>
           <div class="panel panel-default transparant-background">
             <table class="table table-striped align-justify">
               <tr>
