--- a/templates/index.html
+++ b/templates/index.html
@@ -46,11 +46,9 @@
 
     <div class="page-header align-center">
       <div class="container">
-        <div class="jumbotron transparant-background">
+        <div class="jumbotron transparant-background font-small-caps">
           <h2 class = "align-center">PyBursa - professional course of Python</h2>
-          <div class = "font-small-caps desription-color">
-            <h3>Description</h3>
-          </div>
+          <h3 class="desription-color">Description</h3>
           <div class = "lead">
             <p class = "align-justify">This course aims to teach everyone the basics of programming computers using Python.
               We cover the basics of how one constructs a program from a series of simple instructions in Python.
