--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,9 @@
     </nav>
     <div class="jumbotron">
       <div class="container">
-	<div>
-          <h1>Description</h1>
+	<div class="bursa">
+          <h1 class="bursa">Python Bursa</h1>
+          <h2>Description</h2>
           <p>В этом PyBursa мы сместили акцент в сторону практики.
              Будет умеренное количество теории - максимум практики.
              Примерное соотношение теории и практики: 30% на 70%
@@ -50,8 +51,8 @@
         </div>
       </div>
     </div>
- 
-      <div class="container" >
+    <div class="jumbotron">
+      <div class="container">
         <h1>Program</h1>
         <ul class="list-group">
           <li class="list-group-item">Основы Python </li>
@@ -77,7 +78,7 @@
           <li class="list-group-item">Деплоймент</li>
         </ul>
       </div>
-    
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
