--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
           <h2 class = "align-center">PyBursa - professional course of Python</h2>
           <h3 class="desription-color">Description</h3>
           <div class = "lead">
-            <p class = "align-justify">This course aims to teach everyone the basics of programming computers using Python.
+            <p class = "align-justify indent">This course aims to teach everyone the basics of programming computers using Python.
               We cover the basics of how one constructs a program from a series of simple instructions in Python.
               The course has no pre-requisites and avoids all but the simplest mathematics.
               Anyone with moderate computer experience should be able to master the materials in this course.
