--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body class = "background-image">
+  <body class = "set-background-image">
     <nav class="navbar navbar-default transparant-background">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -44,13 +44,13 @@
       </div>
     </nav>
 
-    <div class="page-header align-center">
+    <div class="page-header text-align-center">
       <div class="container">
         <div class="jumbotron transparant-background font-small-caps">
-          <h2 class = "align-center">PyBursa - professional course of Python</h2>
+          <h2 class = "text-align-center">PyBursa - professional course of Python</h2>
           <h3 class="desription-color">Description</h3>
           <div class = "lead">
-            <p class = "align-justify indent">This course aims to teach everyone the basics of programming computers using Python.
+            <p class = "text-align-justify f-indent">This course aims to teach everyone the basics of programming computers using Python.
               We cover the basics of how one constructs a program from a series of simple instructions in Python.
               The course has no pre-requisites and avoids all but the simplest mathematics.
               Anyone with moderate computer experience should be able to master the materials in this course.
@@ -64,7 +64,7 @@
         <div class="jumbotron transparant-background">
           <h2>Program</h2>
           <div class="panel panel-default transparant-background">
-            <table class="table table-striped align-justify">
+            <table class="table table-striped text-align-justify">
               <tr>
                 <td>1</td>
                 <td>Chapter One - Why we Program?</td>
