--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body class = "background-image">
+  <body class = "set-background-image">
     <nav class="navbar navbar-default transparant-background">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -46,14 +46,14 @@
 
     <div class = "contanier">
       <div class="page-header">
-        <h1 class = "align-center">Contacts</h1>
+        <h1 class = "text-align-center">Contacts</h1>
           <div class="row">
             <div class = "contanier">
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail transparant-background">
                   <!--<img class="img-circle center-block" src="../static/images/founder.png" alt="Founder">-->
                   <div class="caption">
-                    <h3 class = "align-center">Founder</h3>
+                    <h3 class = "text-align-center">Founder</h3>
                       <div class="panel panel-default transparant-background">
                         <!-- Table -->
                         <table class="table">
@@ -85,7 +85,7 @@
                 <div class="thumbnail transparant-background">
                   <!--<img class="img-circle center-block" src="../static/images/director.png" alt="Director">-->
                   <div class="caption">
-                    <h3 class = "align-center">Director</h3>
+                    <h3 class = "text-align-center">Director</h3>
                       <div class="panel panel-default transparant-background">
                         <!-- Table -->
                         <table class="table">
@@ -116,7 +116,7 @@
                   <div class="thumbnail transparant-background">
                     <!-- <img class="img-circle center-block" src="../static/images/manager.png" alt="Manager">-->
                     <div class="caption">
-                      <h3 class = "align-center">Manager</h3>
+                      <h3 class = "text-align-center">Manager</h3>
                       <div class="panel panel-default transparant-background">
                         <!-- Table -->
                         <table class="table">
