--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -54,8 +54,8 @@
 
  <!-- Table class="table align-justify"-->
   <table  class="jewel" >
-<tr>
- <th>No</th><th>Surname</th><th>Name</th><th>Adress</th><th>Skype</th>
+<tr><div>
+ <th>No</th><th>Surname</th><th>Name</th><div><th>Adress</th><th>Skype</th>
  </tr> 
 
 <tr class="odd"><div>
