--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,73 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <title>Contact</title>
 
-    <title>Navbar Template for Bootstrap</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="navbar.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <!-- Bootstrap -->
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/css/style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-
   <body>
-
-    <div class="container">
-
-      <!-- Static navbar -->
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+            <a class="navbar-brand" href="index.html">
+              <img id="logo" alt="logo" src="../static/images/logo_itbursa.png"/>
+            </a>
           </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="index.html">About</a></li>
-              <li class="active"><a href="#">Contact</a></li>
+            <ul class="nav nav-pills">
+              <li role="presentation"><a class="passive" href="index.html">Main</a></li>
+              <li role="presentation" class="active"><a class="active" href="contact.html">Contacts</a></li>
             </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
+        </div>
       </nav>
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h2>Курс по WEB-разработке</h2>
-        <ul class="list-group">
-          <h2>Курс по WEB-разработке</h2>
-	  <li class="list-group-item">Director</li>
-	  <li class="list-group-item">Manager</li>
-	  <li class="list-group-item">Founder</li>
-	</ul>
+      <div class="container-fluid">
+          <h4 class="prenames">Director</h4>
+            <table class="table table table-condensed">
+              <tr class="names">
+                  <td class="name">Name</td>
+                  <td class="skype">Skype</td>
+                  <td class="email">Email</td>
+                  <td class="phone">Phone</td>
+              </tr>
+              <tr class="data">
+                <td class="name">Jonh Smith</td>
+                <td class="skype">Smith'sSkype</td>
+                <td class="email">johnsmith@email.com</td>
+                <td class="phone">+380 555 765 48 90</td>
+              </tr>
+            </table>
+          <h4 class="prenames">Manager</h4>
+            <table class="table table table-condensed">
+              <tr class="names">
+                  <td class="name">Name</td>
+                  <td class="skype">Skype</td>
+                  <td class="email">Email</td>
+                  <td class="phone">Phone</td>
+              </tr>
+              <tr class="data">
+                <td class="name">Jonh Rambo</td>
+                <td class="skype">Rambo'sSkype</td>
+                <td class="email">knife@email.com</td>
+                <td class="phone">+380 555 765 48 91</td>
+              </tr>
+            </table>
+           <h4 class="prenames">Founder</h4>
+            <table class="table table table-condensed">
+              <tr class="names">
+                  <td class="name">Name</td>
+                  <td class="skype">Skype</td>
+                  <td class="email">Email</td>
+                  <td class="phone">Phone</td>
+              </tr>
+              <tr class="data">
+                <td class="name">Donald Trumph</td>
+                <td class="skype">Trumph'sSkype</td>
+                <td class="email">money@email.com</td>
+                <td class="phone">+380 555 888 88 88</td>
+              </tr>
+            </table>
       </div>
 
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
