--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -54,34 +54,34 @@
 
  <!-- Table class="table align-justify"-->
   <table  class="jewel" >
-<tr><div>
- <th>No</th><th>Surname</th><th>Name</th><div><th>Adress</th><th>Skype</th>
+<tr>
+ <th>No</th><th>Surname</th><th>Name</th><th>Adress</th><th>Skype</th>
  </tr> 
 
-<tr class="odd"><div>
+<tr class="odd">
 <td><a href="student_detail.html">1</a></td>
 <td>Persianova</td>
-<td>Olena</td></div><td>Kharkov</td><td>OlenaPersianova</td>
+<td>Olena</td><td>Kharkov</td><td>OlenaPersianova</td>
  </tr>
-<tr class="modd"><div>
+<tr class="modd">
 <td>2</td>
 <td>Ivanov</td>
-<td>Ivan</td></div><td>Kharkov</td><td>IvanovIvan</td>
+<td>Ivan</td><td>Kharkov</td><td>IvanovIvan</td>
  </tr>
-<tr class="odd"><div>
+<tr class="odd">
 <td>3</td>
 <td>Petrov</td>
-<td>Petr</td></div><td>Lviv</td><td>PetrovPetr</td>
+<td>Petr</td><td>Lviv</td><td>PetrovPetr</td>
  </tr>
-<tr class="modd"><div> 
+<tr class="modd">
 <td>4</td>
 <td>Sidorov</td>
-<td>Sidor</td></div><td>Odessa</td><td>SidorovSidor</td>
+<td>Sidor</td><td>Odessa</td><td>SidorovSidor</td>
  </tr>
-<tr class="odd"><div>
+<tr class="odd">
 <td>5</td>
 <td>Politov</td>
-<td>Polit</td></div><td>Odessa</td><td>PolitivPolit</td>
+<td>Polit</td><td>Odessa</td><td>PolitivPolit</td>
  </tr>
   </table>    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
